# signlang_project

./: README.md  main.py  pyproject.toml  requirements.txt
models/1_sl_basic_model/: keras_metadata.pb  saved_model.pb
models/1_sl_basic_model/variables/: variables.index
models/2_sl_cnn_model/variables/: variables.index
models/3_sl_aug_model/variables/: variables.index
notebooks/: 1_sl_basic_model.ipynb  2_sl_cnn_model.ipynb  3_sl_data_aug.ipynb  4_sl_predictions.ipynb  5_sl_lite.ipynb  6_sl_quantized_model.ipynb
src/: main.py
src/models/: 5_sl_lite.tflite  tf_lite_float16.tflite  tf_quant_model.tflite
src/models/2_sl_cnn_model/: keras_metadata.pb  saved_model.pb
src/models/2_sl_cnn_model.tf/: saved_model.pb
src/models/2_sl_cnn_model.tf/variables/: variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
src/models/2_sl_cnn_model/variables/: variables.data-00000-of-00001
src/models/3_sl_aug_model/: keras_metadata.pb  saved_model.pb
src/models/3_sl_augmented_model/: saved_model.pb
src/models/3_sl_augmented_model/variables/: variables.data-00000-of-00002  variables.data-00001-of-00002  variables.index
src/notebooks/: 1_sl_basic_model.ipynb  2_sl_cnn_model.ipynb  3_sl_data_aug.ipynb  4_sl_predictions.ipynb  5_sl_lite.ipynb  6_sl_quantized_model.ipynb
src/utils/: conf.py  load_model.py  prediction.py
utils/: conf.py  load_model.py  prediction.py
