[project]
name = "signlang-project"
version = "0.1.0"
description = "American sign language detection using deep learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.6.3",
    "numpy>=1.19.5",
    "opencv-python==4.5.1.48",
    "pandas>=1.3.3",
    "tensorflow==2.5.0",
]
